[package]
name = "masker"
version = "0.0.1"
authors = ["Edmund Smith <ed.smith@collabora.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Mask patterns in data"
repository = "https://github.com/eds-collabora/masker-rs"
keywords = [ "text", "utility", "search" ]
categories = [ "algorithms", "text-processing" ]

[dependencies]

[dev-dependencies]
rand = "0.8"
